<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_message">NEW MESSAGE</string>
    <string name="action_delete_all">Delete all threads</string>
    <string name="action_search">SEARCH</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_hint">Search message</string>
    <string name="title_activity_new_message">Compose message</string>
    <string name="to">To</string>
    <string name="type_message">Type your message</string>
    <string name="title_activity_message_list">MessageListActivity</string>
    <string name="action_call">call</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_delete">Delete</string>
    <string name="empty_list">No content</string>
    <string name="send">Send</string>
    <string name="action_forward">Forward</string>
    <string name="action_detail">Message details</string>
    <string name="title_activity_schedule_sms">ScheduleSMSActivity</string>
    <string name="action_schedule_sms">Schedule SMS</string>
    <string name="send_schedule_sms">Send</string>

    <string-array name="repeat_options">
        <item>No</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="day_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednsday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="title_activity_schedule_list">ScheduleListActivity</string>

</resources>
