<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_create_message"
        android:icon="@drawable/ic_action_new_message"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_create_message"/>
    
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/action_search"/>

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_delete_all"/>
</menu>
