<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/my_vertical_margin"
    android:paddingLeft="@dimen/my_horizontal_margin"
    android:paddingRight="@dimen/my_horizontal_margin"
    android:paddingTop="@dimen/my_vertical_margin"
    tools:context=".MessageListActivity" >
    
	<RelativeLayout
	    android:id="@+id/input_bar"
	    android:layout_width="match_parent"
	    android:layout_height="60dip"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="false" >
	    
		<EditText
	   	    android:id="@+id/text_content"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="match_parent"
	   	    android:layout_alignParentLeft="true"
	   	    android:layout_toLeftOf="@+id/btn_send"
	   	    android:ems="10"
	   	    android:hint="@string/type_message"
	   	    android:maxLines="4" />
	   	   	 
	   	<ImageButton
	   	    android:id="@+id/btn_send"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="match_parent"
	   	    android:layout_alignParentRight="true"
	   	    android:contentDescription="@string/send"
	   	    android:src="@drawable/ic_action_send" />
	</RelativeLayout>
	
	<ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/input_bar"
        android:cacheColorHint="#00000000"
        android:divider="#00000000"
        android:listSelector="#00000000">
    </ListView>
    
	<TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/input_bar"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/empty_list" />

</RelativeLayout>
